# korone

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yaml
docs/source/: conf.py  index.rst  korone.commands.rst  korone.database.rst  korone.locale.rst  korone.modules.rst  korone.rst  korone.utils.rst  modules.rst
src/korone/: __init__.py  __main__.py  config.py  constants.py  main.py
src/korone/commands/: __init__.py  hello.py  modules.py  ping.py  toggle.py
src/korone/database/: __init__.py  chat.py  connection.py  manager.py  query.py  sqlite3_manager.py  table.py  user.py
src/korone/database/impl/: sqlite3_impl.py
src/korone/locale/: __init__.py  en.yaml  korone.pot  pt.yaml
src/korone/locale/pt_BR/LC_MESSAGES/: korone.po
src/korone/locales/: en.yaml  pt.yaml
src/korone/modules/: __init__.py  core.py  hello.py  ping.py  toggle.py
src/korone/tests/: test_manage_user.py  test_user_manager.py
src/korone/utils/: __init__.py  lang.py  log.py  misc.py  traverse.py
tests/: __init__.py  test_user_manager.py
